# mina

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .woodpecker.yml  README.md  gradle.properties  package-lock.json  renovate.json  settings.gradle.kts
.buildkite/: ci.sh  pipeline.yml
.builds/: ci.yml
.github/workflows/: ci.yml  dependencies.yml  (+1 more)
.woodpecker/: .ci.yml  .renovate.yml
backend/: .editorconfig  .gitignore  build.gradle.kts  settings.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
docs/: book.toml
examples/: DeclareBool.mina  DeclareFix.mina  DeclareGadt.mina  DeclareList.mina  DeclareOption.mina  DeclareTree.mina  LetBlock.mina  LetBool.mina  LetChar.mina  LetEtaReduced.mina  LetFloat.mina  LetInt.mina  LetLiteralMatch.mina  LetPoly.mina  LetString.mina
frontend/: Cargo.toml  IntModule.mina  LambdaModule.mina  build.rs  mina.lalrpop
gradle/: libs.versions.toml
gradle-plugin/: .gitignore  build.gradle.kts  settings.gradle.kts
grammar/: .editorconfig  Cargo.toml  IntModule.mina  mina.rs
grammar/src/: ast.proto  mina.y
lang-server/: .gitignore  build.gradle.kts  settings.gradle.kts
langserver/: build.gradle.kts
proto/: ast.proto  env.proto  il.proto  names.proto  types.proto
runtime/: build.gradle.kts
vscode-plugin/: .editorconfig  .gitignore  .vscodeignore  CHANGELOG.md  README.md  build.gradle.kts  eslint.config.mjs  mina-lang-vscode-0.0.1.vsix  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
(+611 files in other folders)
