[package]
name = "mina-lang-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
prost = "0.10"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
prost-build = "0.10"
